--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div id="container">
-            <div id="post">
+            <div id="cabecera">
+                Aquí inicia la cabecera
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar
                     las cosas increibles que se pueden hacer con ramas
