--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,8 @@
         <div id="container">
             <div id="cabecera">
                 Aquí inicia la cabecera
+            </div>
+            <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar
                     las cosas increibles que se pueden hacer con ramas
