--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                hyperblog
+                Bienvenido a hyperblog
                 <span id="tagline">Mi blog de cabecera</span>
             </div>
             <div id="post">
