Footer de la página

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,9 @@
                     Suscríbete y dale like
 
                 </p>
+                <div id="footer">
+                    Hecho en Platzi
+                </div>
             </div>
         </div>
 
